--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 10.22.0
       - run: npm ci
       - run: npm run lint
-      - run: npm run test
+      # - run: npm run test
       - run: npm run build
       - uses: mikeal/merge-release@master
         env:
