--- a/package.json
+++ b/package.json
@@ -17,24 +17,24 @@
     "node": "10.x"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.14",
+    "@types/chai": "4.2.14",
     "@types/mocha": "8.0.3",
-    "@types/node": "^14.14.2",
+    "@types/node": "14.14.2",
     "@types/sinon": "9.0.8",
     "@types/sinon-chai": "3.2.5",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
+    "@typescript-eslint/eslint-plugin": "4.5.0",
+    "@typescript-eslint/parser": "4.5.0",
     "@xapp/config": "0.2.3",
-    "aws-sdk": "^2.777.0",
+    "aws-sdk": "2.777.0",
     "body-parser": "1.19.0",
     "chai": "4.2.0",
-    "eslint": "^7.11.0",
+    "eslint": "7.11.0",
     "eslint-plugin-notice": "0.9.10",
-    "express": "^4.17.1",
-    "mocha": "^8.2.0",
+    "express": "4.17.1",
+    "mocha": "8.2.0",
     "sinon": "9.2.0",
     "sinon-chai": "3.5.0",
-    "stentor": "^1.33.96",
+    "stentor": "1.33.96",
     "ts-node": "9.0.0",
     "typescript": "4.0.3"
   },
@@ -46,11 +46,11 @@
     "test": "mocha --recursive -r ts-node/register \"./src/**/*.test.ts\""
   },
   "dependencies": {
-    "@xapp/question-answering-handler": "^1.0.14",
-    "@xapp/stentor-alexa": "^1.26.73",
-    "@xapp/stentor-dialogflow": "^1.26.73",
-    "@xapp/stentor-lex-connect": "^1.26.73",
-    "@xapp/stentor-service-user-storage": "^1.26.73"
+    "@xapp/question-answering-handler": "1.0.14",
+    "@xapp/stentor-alexa": "1.26.74",
+    "@xapp/stentor-dialogflow": "1.26.73",
+    "@xapp/stentor-lex-connect": "1.26.74",
+    "stentor-user-storage-dynamo": "1.34.0"
   },
   "peerDependencies": {
     "stentor": "1.X"
