--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@xapp/oc-studio-starter",
+  "repository": "github:xapp-ai/oc-studio-starter",
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
