--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "main": "lib/index",
   "files": [
     "dist",
-    "lib"
+    "lib",
+    "template"
   ],
   "engines": {
     "node": "10.x"
