--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@xapp/oc-studio-starter",
+  "repository": "github:xapp-ai/oc-studio-starter",
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
@@ -11,7 +12,8 @@
   "main": "lib/index",
   "files": [
     "dist",
-    "lib"
+    "lib",
+    "template"
   ],
   "engines": {
     "node": "10.x"
