--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "mocha": "8.2.0",
     "sinon": "9.2.1",
     "sinon-chai": "3.5.0",
-    "stentor": "1.35.5",
     "ts-node": "9.0.0",
     "typescript": "4.0.5"
   },
@@ -48,13 +47,11 @@
     "test": "mocha --recursive -r ts-node/register \"./src/**/*.test.ts\""
   },
   "dependencies": {
-    "@xapp/question-answering-handler": "1.0.14",
-    "@xapp/stentor-alexa": "1.27.7",
-    "@xapp/stentor-dialogflow": "1.27.7",
-    "@xapp/stentor-lex-connect": "1.27.7",
-    "stentor-user-storage-dynamo": "1.35.5"
-  },
-  "peerDependencies": {
-    "stentor": "1.X"
+    "@xapp/question-answering-handler": "^1.0.17",
+    "@xapp/stentor-alexa": "^1.27.7",
+    "@xapp/stentor-dialogflow": "^1.27.7",
+    "@xapp/stentor-lex-connect": "^1.27.7",
+    "stentor-user-storage-dynamo": "^1.35.5",
+    "stentor": "^1.35.5"
   }
 }
