--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "test": "mocha --recursive -r ts-node/register \"./src/**/*.test.ts\""
   },
   "dependencies": {
-    "@xapp/question-answering-handler": "^1.0.18",
-    "@xapp/stentor-alexa": "^1.27.7",
-    "@xapp/stentor-dialogflow": "^1.27.7",
-    "@xapp/stentor-lex-connect": "^1.27.7",
-    "stentor-user-storage-dynamo": "^1.35.5",
-    "stentor": "^1.35.5"
+    "@xapp/question-answering-handler": "^1.0.23",
+    "@xapp/stentor-alexa": "^1.X",
+    "@xapp/stentor-dialogflow": "^1.X",
+    "@xapp/stentor-lex-connect": "^1.X",
+    "stentor-user-storage-dynamo": "^1.X",
+    "stentor": "^1.X"
   }
 }
