--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "test": "mocha --recursive -r ts-node/register \"./src/**/*.test.ts\""
   },
   "dependencies": {
-    "@xapp/question-answering-handler": "^1.0.23",
-    "@xapp/stentor-alexa": "^1.X",
-    "@xapp/stentor-dialogflow": "^1.X",
-    "@xapp/stentor-lex-connect": "^1.X",
-    "stentor-user-storage-dynamo": "^1.X",
-    "stentor": "^1.X"
+    "@xapp/question-answering-handler": "1.0.24",
+    "@xapp/stentor-alexa": "1.28.15",
+    "@xapp/stentor-dialogflow": "1.28.15",
+    "@xapp/stentor-lex-connect": "1.28.15",
+    "stentor": "1.36.0",
+    "stentor-user-storage-dynamo": "1.35.19"
   }
 }
