--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "./node_modules/@xapp/config/tsconfig.json",
   "compilerOptions": {
-    "rootDir": "src",
+    "rootDir": "packages/oc-studio-starter/src",
     "outDir": "lib"
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "src/**/__test__/*"]
+  "include": ["packages/oc-studio-starter/src"],
+  "exclude": ["node_modules", "packages/oc-studio-starter/src/**/__test__/*"]
 }
