--- a/packages/oc-studio-starter/tsconfig.json
+++ b/packages/oc-studio-starter/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./node_modules/@xapp/config/tsconfig.json",
+  "extends": "@xapp/config/tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "lib"
