chore:master to main

--- a/lerna.json
+++ b/lerna.json
@@ -10,7 +10,7 @@
             "exact": true
         },
         "version": {
-            "allowBranch": "master",
+            "allowBranch": "main",
             "exact": true,
             "conventionalCommits": true,
             "message": "chore(release): 📣⚡ publish release %v [skip ci]"
