--- a/packages/oc-studio-starter-template/package.json
+++ b/packages/oc-studio-starter-template/package.json
@@ -7,7 +7,18 @@
     },
     "version": "1.1.121",
     "description": "A starter template for OC Studio & 📣 stentor",
+    "types": "lib/index",
+    "typings": "lib/index",
+    "main": "lib/index",
     "files": [
-        "template"
-    ]
+        "template",
+        "lib"
+    ],
+    "devDependencies": {
+        "typescript": "4.1.3"
+    },
+    "scripts": {
+        "build": "tsc -d true -p .",
+        "clean": "rm -rf ./lib/*"
+    }
 }
