--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,15 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
       - name: Set up Node.js
-        uses: actions/setup-node@master
+        uses: actions/setup-node@v2
         with:
           node-version: 10.22.0
-      - run: npm ci
-      - run: npm run lint
+      - run: yarn --frozen-lockfile
+      - run: yarn lint
       # - run: npm run test
-      - run: npm run build
-      - uses: mikeal/merge-release@master
+      - run: yarn build
+      - run: yarn release
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
