--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-latest
+    env:
+      NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
     strategy:
       matrix:
         # node-version: [10.x, 12.x, 14.x] We want this when we figure out package.json engines field
@@ -21,8 +23,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - run: 'echo "//registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}" > ~/.npmrc'
+        shell: bash
       - run: yarn --frozen-lockfile
       - run: yarn lint
       # - run: npm run test
       - run: yarn build
-
