--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,4 +33,5 @@ jobs:
       - run: yarn build
       - run: yarn logout
       - run: npm whoami
+      - run: git update-index skip-worktree -- .npmrc
       - run: yarn release
