chore:slim npm package

--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -11,9 +11,7 @@
   "typings": "lib/index",
   "main": "lib/index",
   "files": [
-    "dist",
-    "lib",
-    "template"
+    "lib/index"
   ],
   "devDependencies": {
     "@types/chai": "4.2.14",
