--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 save-exact=true
-@xapp:registry=http://registry.npmjs.org/
-registry=http://registry.npmjs.org/
+@xapp:registry=https://registry.npmjs.org/
+registry=https://registry.npmjs.org/
 //registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN
