--- a/packages/oc-studio-starter-template/template/LaunchRequest.json
+++ b/packages/oc-studio-starter-template/template/LaunchRequest.json
@@ -13,11 +13,12 @@
           "suggestions": []
         },
         "segments": {
-          "GREETING": [{ "segment": "Hello" }, { "segment": "Hi" }]
+          "GREETING": [{ "segment": {} }, { "segment": "Hi" }]
         }
       }
     ]
   },
+  "data": {},
   "intentId": "LaunchRequest",
   "langCode": "en-US",
   "name": "👋 Welcome",
