--- a/packages/oc-studio-starter-template/template/LaunchRequest.json
+++ b/packages/oc-studio-starter-template/template/LaunchRequest.json
@@ -13,7 +13,10 @@
           "suggestions": []
         },
         "segments": {
-          "GREETING": [{ "segment": {} }, { "segment": "Hi" }]
+          "GREETING": [
+            { "segment": { "displayText": "Hi", "ssml": "Hi" } },
+            { "segment": { "displayText": "Hello", "ssml": "Hello" } }
+          ]
         }
       }
     ]
@@ -23,5 +26,5 @@
   "langCode": "en-US",
   "name": "👋 Welcome",
   "type": "ConversationHandler",
-  "utterancePatterns": []
+  "utterancePatterns": ["hello", "hi", "howdy"]
 }
