chore: node engines

--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -13,6 +13,9 @@
   "files": [
     "lib/index"
   ],
+  "engines": {
+    "node": "^10 || ^12"
+  },
   "devDependencies": {
     "@types/chai": "4.2.16",
     "@types/mocha": "8.2.2",
