chore: Small Fixes to the Template (#450)
* chore:small

* chore:small

* chore: node engines

--- a/packages/oc-studio-starter-template/template/LaunchRequest.json
+++ b/packages/oc-studio-starter-template/template/LaunchRequest.json
@@ -13,14 +13,18 @@
           "suggestions": []
         },
         "segments": {
-          "GREETING": [{ "segment": "Hello" }, { "segment": "Hi" }]
+          "GREETING": [
+            { "segment": { "displayText": "Hi", "ssml": "Hi" } },
+            { "segment": { "displayText": "Hello", "ssml": "Hello" } }
+          ]
         }
       }
     ]
   },
+  "data": {},
   "intentId": "LaunchRequest",
   "langCode": "en-US",
   "name": "👋 Welcome",
   "type": "ConversationHandler",
-  "utterancePatterns": []
+  "utterancePatterns": ["hello", "hi", "howdy"]
 }
