--- a/packages/oc-studio-starter-template/package.json
+++ b/packages/oc-studio-starter-template/package.json
@@ -1,24 +1,27 @@
 {
-    "name": "@xapp/oc-studio-starter-template",
-    "repository": "github:xapp-ai/oc-studio-starter",
-    "license": "Apache-2.0",
-    "publishConfig": {
-        "access": "public"
-    },
-    "version": "1.1.427",
-    "description": "A starter template for OC Studio & 📣 stentor",
-    "types": "lib/index",
-    "typings": "lib/index",
-    "main": "lib/index",
-    "files": [
-        "template",
-        "lib"
-    ],
-    "devDependencies": {
-        "typescript": "4.2.4"
-    },
-    "scripts": {
-        "build": "tsc -d true -p .",
-        "clean": "rm -rf ./lib/*"
-    }
+  "name": "@xapp/oc-studio-starter-template",
+  "repository": "github:xapp-ai/oc-studio-starter",
+  "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
+  "version": "1.1.427",
+  "description": "A starter template for OC Studio & 📣 stentor",
+  "types": "lib/index",
+  "typings": "lib/index",
+  "main": "lib/index",
+  "files": [
+    "template",
+    "lib"
+  ],
+  "engines": {
+    "node": "^10 || ^12"
+  },
+  "devDependencies": {
+    "typescript": "4.2.4"
+  },
+  "scripts": {
+    "build": "tsc -d true -p .",
+    "clean": "rm -rf ./lib/*"
+  }
 }
