--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -14,7 +14,7 @@
     "lib/index"
   ],
   "engines": {
-    "node": "^10 || ^12"
+    "node": "^10 || ^12 || ^14"
   },
   "devDependencies": {
     "@types/chai": "4.2.17",
@@ -49,7 +49,7 @@
     "@xapp/stentor-alexa": "1.32.82",
     "@xapp/stentor-dialogflow": "1.32.82",
     "@xapp/stentor-lex-connect": "1.32.82",
-    "stentor": "1.38.49",
-    "stentor-user-storage-dynamo": "1.38.48"
+    "stentor": "1.39.0",
+    "stentor-user-storage-dynamo": "1.39.0"
   }
 }
