--- a/packages/oc-studio-starter-template/package.json
+++ b/packages/oc-studio-starter-template/package.json
@@ -15,7 +15,7 @@
     "lib"
   ],
   "engines": {
-    "node": "^10 || ^12"
+    "node": "^10 || ^12 || ^14"
   },
   "devDependencies": {
     "typescript": "4.2.4"
