--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   ],
   "devDependencies": {
     "@xapp/config": "0.2.3",
-    "lerna": "4.0.0"
+    "lerna": "4.0.0",
+    "semantic-release": "17.4.2"
   },
   "scripts": {
     "lerna": "lerna",
