--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -29,9 +31,8 @@ jobs:
         shell: bash
       - run: yarn --frozen-lockfile
       - run: yarn lint
-      # - run: npm run test
+      - run: yarn test
       - run: yarn build
       - run: yarn logout
       - run: npm whoami
-      - run: git update-index --skip-worktree -- .npmrc
-      - run: yarn release
+      - run: npx semantic-release
