feat:Adding Stentor Channel

--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -50,6 +50,7 @@
     "@xapp/stentor-dialogflow": "1.32.83",
     "@xapp/stentor-lex-connect": "1.32.83",
     "stentor": "1.39.3",
-    "stentor-user-storage-dynamo": "1.39.2"
+    "stentor-user-storage-dynamo": "1.39.2",
+    "stentor-channel": "1.40.0"
   }
 }
