chore(release): 📣⚡ publish release 1.1.430 [skip ci]

--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -5,7 +5,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "1.1.429",
+  "version": "1.1.430",
   "description": "A starter template for OC Studio & 📣 stentor",
   "types": "lib/index",
   "typings": "lib/index",
@@ -50,7 +50,7 @@
     "@xapp/stentor-dialogflow": "1.32.83",
     "@xapp/stentor-lex-connect": "1.32.83",
     "stentor": "1.39.3",
-    "stentor-user-storage-dynamo": "1.39.2",
-    "stentor-channel": "1.40.0"
+    "stentor-channel": "1.40.0",
+    "stentor-user-storage-dynamo": "1.39.2"
   }
 }
