--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -11,7 +11,7 @@
   "typings": "lib/index",
   "main": "lib/index",
   "files": [
-    "lib/index"
+    "lib"
   ],
   "engines": {
     "node": "^10 || ^12 || ^14"
