chore:template fix

--- a/packages/oc-studio-starter-template/template/InputUnknown.json
+++ b/packages/oc-studio-starter-template/template/InputUnknown.json
@@ -10,7 +10,7 @@
         "outputSpeech": {
           "displayText": "Sorry, I don't fully understand you. Can try asking in a different way?",
           "ssml": "Sorry, I don't fully understand you.  Can try asking in a different way?",
-          "suggestions": ["Help", "Agent"]
+          "suggestions": [{ "title": "Help" }, { "title": "Agent" }]
         }
       }
     ]
