--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -20,27 +20,28 @@
     "@types/chai": "4.2.17",
     "@types/mocha": "8.2.2",
     "@types/node": "14.14.31",
-    "@types/sinon": "10.0.0",
     "@types/sinon-chai": "3.2.5",
+    "@types/sinon": "10.0.0",
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
     "@xapp/config": "0.2.3",
     "aws-sdk": "2.899.0",
     "body-parser": "1.19.0",
     "chai": "4.3.4",
-    "eslint": "7.25.0",
     "eslint-plugin-notice": "0.9.10",
+    "eslint": "7.25.0",
     "express": "4.17.1",
     "mocha": "8.3.2",
-    "sinon": "10.0.0",
+    "nodemon": "2.0.7",
     "sinon-chai": "3.6.0",
+    "sinon": "10.0.0",
     "ts-node": "9.1.1",
     "typescript": "4.2.4"
   },
   "scripts": {
     "build": "tsc -d true -p .",
     "clean": "rm -rf ./lib/*",
-    "express": "OVAI_LOG_LEVEL=debug node lib/express.js",
+    "express": "STENTOR_LOG_LEVEL=debug nodemon src/express.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "test": "exit 0"
   },
