--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -17,6 +17,9 @@
     "node": "^10 || ^12 || ^14"
   },
   "devDependencies": {
+    "@babel/core": "7.15.0",
+    "@babel/preset-env": "7.15.0",
+    "@babel/preset-typescript": "7.15.0",
     "@types/chai": "4.2.21",
     "@types/mocha": "8.2.2",
     "@types/node": "14.14.31",
@@ -26,21 +29,29 @@
     "@typescript-eslint/parser": "4.31.0",
     "@xapp/config": "0.2.3",
     "aws-sdk": "2.991.0",
+    "babel-loader": "8.2.2",
+    "babel-preset-minify": "0.5.1",
+    "cache-loader": "4.1.0",
     "body-parser": "1.19.0",
     "chai": "4.3.4",
     "eslint": "7.32.0",
     "eslint-plugin-notice": "0.9.10",
+    "fork-ts-checker-webpack-plugin": "6.3.1",
     "express": "4.17.1",
     "mocha": "8.4.0",
     "nodemon": "2.0.12",
     "sinon": "10.0.0",
     "sinon-chai": "3.7.0",
     "ts-node": "10.2.0",
-    "typescript": "4.4.3"
+    "typescript": "4.4.3",
+    "webpack": "5.53.0",
+    "webpack-cli": "4.8.0",
+    "webpack-node-externals": "3.0.0"
   },
   "scripts": {
     "build": "tsc -d true -p .",
     "clean": "rm -rf ./lib/*",
+    "dist": "webpack && node scripts/dist.js",
     "express": "STENTOR_LOG_LEVEL=debug nodemon src/express.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "test": "exit 0"
