--- a/packages/oc-studio-starter/tsconfig.json
+++ b/packages/oc-studio-starter/tsconfig.json
@@ -1,8 +1,14 @@
 {
-  "extends": "@xapp/config/tsconfig.json",
   "compilerOptions": {
+    "declaration": true,
+    "module": "commonjs",
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "allowSyntheticDefaultImports": true,
+    "outDir": "lib",
     "rootDir": "src",
-    "outDir": "lib"
+    "sourceMap": true,
+    "target": "es6"
   },
   "include": ["src"],
   "exclude": ["node_modules", "src/**/__test__/*"]
