--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -14,11 +14,11 @@
     "lib"
   ],
   "engines": {
-    "node": "^10 || ^12 || ^14"
+    "node": "^12 || ^14"
   },
   "devDependencies": {
-    "@babel/core": "7.15.0",
-    "@babel/preset-env": "7.15.0",
+    "@babel/core": "7.15.5",
+    "@babel/preset-env": "7.15.6",
     "@babel/preset-typescript": "7.15.0",
     "@types/chai": "4.2.21",
     "@types/mocha": "8.2.2",
@@ -36,7 +36,7 @@
     "chai": "4.3.4",
     "eslint": "7.32.0",
     "eslint-plugin-notice": "0.9.10",
-    "fork-ts-checker-webpack-plugin": "6.3.1",
+    "fork-ts-checker-webpack-plugin": "6.4.0",
     "express": "4.17.1",
     "mocha": "8.4.0",
     "nodemon": "2.0.12",
@@ -44,23 +44,24 @@
     "sinon-chai": "3.7.0",
     "ts-node": "10.2.0",
     "typescript": "4.4.3",
-    "webpack": "5.53.0",
-    "webpack-cli": "4.8.0",
+    "webpack": "5.61.0",
+    "webpack-cli": "4.9.0",
     "webpack-node-externals": "3.0.0"
   },
   "scripts": {
     "build": "tsc -d true -p .",
     "clean": "rm -rf ./lib/*",
-    "dist": "webpack && node scripts/dist.js",
+    "dist": "tsc -d true -p . && node scripts/dist.js",
+    "webpack": "webpack",
     "express": "STENTOR_LOG_LEVEL=debug nodemon src/express.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "test": "exit 0"
   },
   "dependencies": {
-    "@xapp/question-answering-handler": "2.0.0",
-    "@xapp/stentor-alexa": "1.37.40",
-    "@xapp/stentor-dialogflow": "1.37.40",
-    "@xapp/stentor-lex-connect": "1.37.40",
+    "@xapp/question-answering-handler": "2.0.1",
+    "@xapp/stentor-alexa": "1.37.43",
+    "@xapp/stentor-dialogflow": "1.37.43",
+    "@xapp/stentor-lex-connect": "1.37.43",
     "stentor": "1.48.8",
     "stentor-channel": "1.48.8",
     "stentor-user-storage-dynamo": "1.48.7"
