--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -14,9 +14,12 @@
     "lib"
   ],
   "engines": {
-    "node": "^10 || ^12 || ^14"
+    "node": "^12 || ^14"
   },
   "devDependencies": {
+    "@babel/core": "7.15.5",
+    "@babel/preset-env": "7.15.6",
+    "@babel/preset-typescript": "7.15.0",
     "@types/chai": "4.2.21",
     "@types/mocha": "8.2.2",
     "@types/node": "14.17.32",
@@ -26,27 +29,36 @@
     "@typescript-eslint/parser": "5.3.0",
     "@xapp/config": "0.2.3",
     "aws-sdk": "2.1019.0",
+    "babel-loader": "8.2.2",
+    "babel-preset-minify": "0.5.1",
+    "cache-loader": "4.1.0",
     "body-parser": "1.19.0",
     "chai": "4.3.4",
     "eslint": "8.1.0",
     "eslint-plugin-notice": "0.9.10",
+    "fork-ts-checker-webpack-plugin": "6.4.0",
     "express": "4.17.1",
     "mocha": "8.4.0",
     "nodemon": "2.0.13",
     "sinon": "10.0.0",
     "sinon-chai": "3.7.0",
     "ts-node": "10.4.0",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+    "webpack": "5.61.0",
+    "webpack-cli": "4.9.0",
+    "webpack-node-externals": "3.0.0"
   },
   "scripts": {
     "build": "tsc -d true -p .",
     "clean": "rm -rf ./lib/*",
+    "dist": "tsc -d true -p . && node scripts/dist.js",
+    "webpack": "webpack",
     "express": "STENTOR_LOG_LEVEL=debug nodemon src/express.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "test": "exit 0"
   },
   "dependencies": {
-    "@xapp/question-answering-handler": "1.5.0",
+    "@xapp/question-answering-handler": "2.0.1",
     "@xapp/stentor-alexa": "1.37.43",
     "@xapp/stentor-dialogflow": "1.37.43",
     "@xapp/stentor-lex-connect": "1.37.43",
