--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -62,6 +62,7 @@
     "@xapp/stentor-alexa": "1.39.13",
     "@xapp/stentor-dialogflow": "1.39.13",
     "@xapp/stentor-lex-connect": "1.39.13",
+    "@xapp/stentor-lex-v2": "1.39.13",
     "stentor": "1.48.28",
     "stentor-channel": "1.48.28",
     "stentor-user-storage-dynamo": "1.48.28"
