--- a/packages/oc-studio-starter-template/package.json
+++ b/packages/oc-studio-starter-template/package.json
@@ -15,7 +15,7 @@
     "lib"
   ],
   "engines": {
-    "node": " ^12 || ^14"
+    "node": "^12 || ^14 || ^16"
   },
   "devDependencies": {
     "typescript": "4.5.5"
