fix:adding tags

--- a/packages/oc-studio-starter-template/template/InputUnknown.json
+++ b/packages/oc-studio-starter-template/template/InputUnknown.json
@@ -2,6 +2,7 @@
   "content": {
     "InputUnknown": [
       {
+        "tag": "GENERIC_INPUT_UNKNOWN",
         "reprompt": {
           "displayText": "Could you try asking in a different way?",
           "ssml": "Could you try asking in a different way?",
