--- a/packages/oc-studio-starter-template/template/LaunchRequest.json
+++ b/packages/oc-studio-starter-template/template/LaunchRequest.json
@@ -2,6 +2,7 @@
   "content": {
     "LaunchRequest": [
       {
+        "tag": "WELCOME_NEW_USER",
         "outputSpeech": {
           "displayText": "${GREETING}, how can I help?",
           "ssml": "${GREETING}, how can I help?",
@@ -18,6 +19,27 @@
             { "segment": { "displayText": "Hello", "ssml": "Hello" } }
           ]
         }
+      },
+      {
+        "tag": "WELCOME_RETURNING_USER",
+        "reprompt": {
+          "ssml": "<speak>What can I help you with?</speak>",
+          "displayText": "What can I help you with?"
+        },
+        "conditions": "activeWithin(1, \"day\")",
+        "outputSpeech": {
+          "ssml": "<speak>Hello again.  What can I help you with?</speak>",
+          "displayText": "Hello again.  What can I help you with?",
+          "suggestions": [
+            {
+              "title": "Contact Us"
+            },
+            {
+              "title": "Request Service"
+            }
+          ]
+        },
+        "segments": {}
       }
     ]
   },
