--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -21,14 +21,14 @@
     "@babel/preset-env": "7.18.2",
     "@babel/preset-typescript": "7.17.12",
     "@types/chai": "4.3.1",
-    "@types/mocha": "8.2.3",
+    "@types/mocha": "9.1.1",
     "@types/node": "14.18.21",
     "@types/sinon": "10.0.11",
     "@types/sinon-chai": "3.2.8",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
     "@xapp/config": "0.2.3",
-    "aws-sdk": "2.1161.0",
+    "aws-sdk": "2.1162.0",
     "babel-loader": "8.2.5",
     "babel-preset-minify": "0.5.2",
     "body-parser": "1.20.0",
@@ -38,9 +38,11 @@
     "eslint-plugin-notice": "0.9.10",
     "express": "4.18.1",
     "fork-ts-checker-webpack-plugin": "7.2.11",
-    "mocha": "8.4.0",
+    "mocha": "10.0.0",
     "nodemon": "2.0.18",
-    "sinon": "13.0.2",
+    "serverless": "3.19.0",
+    "serverless-plugin-common-excludes": "4.0.0",
+    "sinon": "14.0.0",
     "sinon-chai": "3.7.0",
     "ts-node": "10.8.1",
     "typescript": "4.7.4",
@@ -53,6 +55,7 @@
     "clean": "rm -rf ./lib/*",
     "dist": "tsc -d true -p . && node scripts/dist.js",
     "webpack": "webpack",
+    "deploy:prod": "rimraf ./dist && yarn webpack && serverless deploy --stage production",
     "express": "STENTOR_LOG_LEVEL=debug nodemon src/express.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "test": "exit 0"
@@ -63,8 +66,8 @@
     "@xapp/stentor-dialogflow": "1.40.207",
     "@xapp/stentor-lex-connect": "1.40.207",
     "@xapp/stentor-lex-v2": "1.40.207",
-    "stentor": "1.56.14",
-    "stentor-channel": "1.56.14",
-    "stentor-user-storage-dynamo": "1.56.12"
+    "stentor": "1.56.15",
+    "stentor-channel": "1.56.15",
+    "stentor-user-storage-dynamo": "1.56.15"
   }
 }
