chore:fix buildg

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "lerna run lint",
     "build": "lerna run build",
     "test": "TZ=UTC lerna run test",
+    "deploy:prod": "lerna run deploy:prod",
     "release": "lerna version --yes && git push origin --tags && lerna publish from-git --yes"
   }
 }
