--- a/packages/oc-studio-starter/serverless.yml
+++ b/packages/oc-studio-starter/serverless.yml
@@ -12,6 +12,7 @@ custom:
 
 plugins:
   - serverless-plugin-common-excludes
+  - serverless-plugin-monorepo
 
 package:
   excludeDevDependencies: true
