--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -17,37 +17,38 @@
     "node": "^12 || ^14 || ^16"
   },
   "devDependencies": {
-    "@babel/core": "7.18.6",
-    "@babel/preset-env": "7.18.6",
+    "@babel/core": "7.18.9",
+    "@babel/preset-env": "7.18.9",
     "@babel/preset-typescript": "7.18.6",
     "@types/chai": "4.3.1",
     "@types/mocha": "9.1.1",
     "@types/node": "14.18.21",
     "@types/sinon": "10.0.12",
     "@types/sinon-chai": "3.2.8",
-    "@typescript-eslint/eslint-plugin": "5.30.5",
-    "@typescript-eslint/parser": "5.30.5",
+    "@typescript-eslint/eslint-plugin": "5.30.7",
+    "@typescript-eslint/parser": "5.30.7",
     "@xapp/config": "0.2.3",
-    "aws-sdk": "2.1169.0",
+    "aws-sdk": "2.1177.0",
     "babel-loader": "8.2.5",
     "babel-preset-minify": "0.5.2",
     "body-parser": "1.20.0",
     "cache-loader": "4.1.0",
     "chai": "4.3.6",
-    "eslint": "8.19.0",
     "eslint-plugin-notice": "0.9.10",
+    "eslint": "8.20.0",
     "express": "4.18.1",
-    "fork-ts-checker-webpack-plugin": "7.2.11",
+    "fork-ts-checker-webpack-plugin": "7.2.13",
     "mocha": "10.0.0",
     "nodemon": "2.0.19",
-    "serverless": "3.19.0",
     "serverless-plugin-common-excludes": "4.0.0",
-    "sinon": "14.0.0",
+    "serverless-plugin-monorepo": "0.11.0",
+    "serverless": "3.21.0",
     "sinon-chai": "3.7.0",
-    "ts-node": "10.8.2",
+    "sinon": "14.0.0",
+    "ts-node": "10.9.1",
     "typescript": "4.7.4",
-    "webpack": "5.73.0",
     "webpack-cli": "4.10.0",
+    "webpack": "5.73.0",
     "webpack-node-externals": "3.0.0"
   },
   "scripts": {
@@ -55,6 +56,7 @@
     "clean": "rm -rf ./lib/*",
     "dist": "tsc -d true -p . && node scripts/dist.js",
     "webpack": "webpack",
+    "deploy:staging": "rimraf ./lib && yarn build && serverless deploy --stage staging",
     "deploy:prod": "rimraf ./lib && yarn build && serverless deploy --stage production",
     "express": "STENTOR_LOG_LEVEL=debug nodemon src/express.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
@@ -62,12 +64,12 @@
   },
   "dependencies": {
     "@xapp/question-answering-handler": "2.1.6",
-    "@xapp/stentor-alexa": "1.40.214",
-    "@xapp/stentor-dialogflow": "1.40.207",
-    "@xapp/stentor-lex-connect": "1.40.214",
-    "@xapp/stentor-lex-v2": "1.40.214",
-    "stentor": "1.56.23",
-    "stentor-channel": "1.56.23",
-    "stentor-user-storage-dynamo": "1.56.22"
+    "@xapp/stentor-alexa": "1.40.216",
+    "@xapp/stentor-dialogflow": "1.40.219",
+    "@xapp/stentor-lex-connect": "1.40.216",
+    "@xapp/stentor-lex-v2": "1.40.216",
+    "stentor": "1.56.34",
+    "stentor-channel": "1.56.34",
+    "stentor-user-storage-dynamo": "1.56.31"
   }
 }
