--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -23,32 +23,32 @@
     "@types/chai": "4.3.1",
     "@types/mocha": "9.1.1",
     "@types/node": "14.18.21",
-    "@types/sinon": "10.0.12",
+    "@types/sinon": "10.0.13",
     "@types/sinon-chai": "3.2.8",
     "@typescript-eslint/eslint-plugin": "5.30.7",
     "@typescript-eslint/parser": "5.30.7",
     "@xapp/config": "0.2.3",
-    "aws-sdk": "2.1177.0",
+    "aws-sdk": "2.1180.0",
     "babel-loader": "8.2.5",
     "babel-preset-minify": "0.5.2",
     "body-parser": "1.20.0",
     "cache-loader": "4.1.0",
     "chai": "4.3.6",
-    "eslint-plugin-notice": "0.9.10",
     "eslint": "8.20.0",
+    "eslint-plugin-notice": "0.9.10",
     "express": "4.18.1",
     "fork-ts-checker-webpack-plugin": "7.2.13",
     "mocha": "10.0.0",
     "nodemon": "2.0.19",
+    "serverless": "3.21.0",
     "serverless-plugin-common-excludes": "4.0.0",
     "serverless-plugin-monorepo": "0.11.0",
-    "serverless": "3.21.0",
-    "sinon-chai": "3.7.0",
     "sinon": "14.0.0",
+    "sinon-chai": "3.7.0",
     "ts-node": "10.9.1",
     "typescript": "4.7.4",
-    "webpack-cli": "4.10.0",
     "webpack": "5.73.0",
+    "webpack-cli": "4.10.0",
     "webpack-node-externals": "3.0.0"
   },
   "scripts": {
@@ -56,6 +56,7 @@
     "clean": "rm -rf ./lib/*",
     "dist": "tsc -d true -p . && node scripts/dist.js",
     "webpack": "webpack",
+    "update:prod": "rimraf ./lib && yarn build && serverless deploy -f app --stage production",
     "deploy:staging": "rimraf ./lib && yarn build && serverless deploy --stage staging",
     "deploy:prod": "rimraf ./lib && yarn build && serverless deploy --stage production",
     "express": "STENTOR_LOG_LEVEL=debug nodemon src/express.ts",
@@ -64,12 +65,12 @@
   },
   "dependencies": {
     "@xapp/question-answering-handler": "2.1.6",
-    "@xapp/stentor-alexa": "1.40.216",
+    "@xapp/stentor-alexa": "1.40.220",
     "@xapp/stentor-dialogflow": "1.40.219",
-    "@xapp/stentor-lex-connect": "1.40.216",
-    "@xapp/stentor-lex-v2": "1.40.216",
-    "stentor": "1.56.34",
-    "stentor-channel": "1.56.34",
-    "stentor-user-storage-dynamo": "1.56.31"
+    "@xapp/stentor-lex-connect": "1.40.220",
+    "@xapp/stentor-lex-v2": "1.40.220",
+    "stentor": "1.56.36",
+    "stentor-channel": "1.56.36",
+    "stentor-user-storage-dynamo": "1.56.36"
   }
 }
