--- a/packages/oc-studio-starter/serverless.yml
+++ b/packages/oc-studio-starter/serverless.yml
@@ -31,7 +31,7 @@ package:
 provider:
   name: aws
   runtime: nodejs14.x
-  stage: dev
+  stage: ${sls:stage}
   region: us-east-1
   stackName: ${self:custom.myEnvironment.APP_ID}-${sls:stage}
   profile: ${env:AWS_PROFILE}
