--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -20,6 +20,7 @@
     "@babel/core": "7.18.9",
     "@babel/preset-env": "7.18.9",
     "@babel/preset-typescript": "7.18.6",
+    "@types/aws-lambda": "8.10.102",
     "@types/chai": "4.3.1",
     "@types/mocha": "9.1.1",
     "@types/node": "14.18.21",
