--- a/packages/oc-studio-starter/package.json
+++ b/packages/oc-studio-starter/package.json
@@ -17,13 +17,14 @@
     "node": "^12 || ^14 || ^16"
   },
   "devDependencies": {
-    "@babel/core": "7.18.5",
-    "@babel/preset-env": "7.18.2",
-    "@babel/preset-typescript": "7.17.12",
-    "@types/chai": "4.3.3",
-    "@types/mocha": "8.2.3",
+    "@babel/core": "7.18.9",
+    "@babel/preset-env": "7.18.9",
+    "@babel/preset-typescript": "7.18.6",
+    "@types/aws-lambda": "8.10.102",
+    "@types/chai": "4.3.1",
+    "@types/mocha": "9.1.1",
     "@types/node": "14.18.21",
-    "@types/sinon": "10.0.11",
+    "@types/sinon": "10.0.13",
     "@types/sinon-chai": "3.2.8",
     "@typescript-eslint/eslint-plugin": "5.31.0",
     "@typescript-eslint/parser": "5.31.0",
@@ -37,10 +38,13 @@
     "eslint": "8.20.0",
     "eslint-plugin-notice": "0.9.10",
     "express": "4.18.1",
-    "fork-ts-checker-webpack-plugin": "7.2.11",
-    "mocha": "8.4.0",
-    "nodemon": "2.0.15",
-    "sinon": "13.0.2",
+    "fork-ts-checker-webpack-plugin": "7.2.13",
+    "mocha": "10.0.0",
+    "nodemon": "2.0.19",
+    "serverless": "3.21.0",
+    "serverless-plugin-common-excludes": "4.0.0",
+    "serverless-plugin-monorepo": "0.11.0",
+    "sinon": "14.0.0",
     "sinon-chai": "3.7.0",
     "ts-node": "10.9.1",
     "typescript": "4.7.4",
@@ -53,6 +57,9 @@
     "clean": "rm -rf ./lib/*",
     "dist": "tsc -d true -p . && node scripts/dist.js",
     "webpack": "webpack",
+    "update:prod": "rimraf ./lib && yarn build && serverless deploy -f app --stage production",
+    "deploy:staging": "rimraf ./lib && yarn build && serverless deploy --stage staging",
+    "deploy:prod": "rimraf ./lib && yarn build && serverless deploy --stage production",
     "express": "STENTOR_LOG_LEVEL=debug nodemon src/express.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "test": "exit 0"
