--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "private": true,
+  "publishConfig": {
+    "access": "restricted"
+  },
   "repository": "github:xapp-ai/oc-studio-starter",
   "workspaces": {
     "packages": [
@@ -11,8 +14,8 @@
   },
   "devDependencies": {
     "@xapp/config": "0.2.3",
-    "lerna": "5.5.0",
-    "semantic-release": "19.0.3"
+    "lerna": "5.5.2",
+    "semantic-release": "19.0.5"
   },
   "scripts": {
     "lerna": "lerna",
