--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -24,20 +24,22 @@
     "@storybook/react": "6.5.12",
     "@types/jest": "29.0.3",
     "babel-loader": "8.2.5",
+    "css-loader": "5.2.6",
     "enzyme": "3.11.0",
     "jest": "29.0.3",
     "postcss": "8.4.16",
     "react-redux": "7.2.6",
-    "redux": "4.2.0",
     "redux-thunk": "2.4.1",
-    "rollup": "2.79.0",
+    "redux": "4.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-scss": "3.0.0",
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-typescript2": "0.34.0",
+    "rollup": "2.79.0",
+    "sass-loader": "10.1.1",
     "sass": "1.54.9",
-    "sass-loader": "13.0.2",
+    "style-loader": "2.0.0",
     "typescript": "4.8.3"
   },
   "peerDependencies": {
