--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,7 @@
 {
   "extends": ["config:base", "schedule:daily"],
   "statusCheckVerify": true,
-  "ignoreDeps": ["style-loader", "css-loader"],
+  "ignoreDeps": ["style-loader", "css-loader", "sass", "sass-loader"],
   "packageRules": [
     {
       "depTypeList": ["devDependencies"],
