--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -22,9 +22,12 @@
     "@storybook/addon-essentials": "6.5.12",
     "@storybook/addon-links": "6.5.12",
     "@storybook/react": "6.5.12",
+    "@typescript-eslint/eslint-plugin": "5.38.0",
     "@types/jest": "29.0.3",
     "babel-loader": "8.2.5",
     "css-loader": "5.2.6",
+    "eslint": "8.23.1",
+    "eslint-plugin-notice": "0.9.10",
     "enzyme": "3.11.0",
     "jest": "29.0.3",
     "postcss": "8.4.16",
@@ -52,6 +55,7 @@
     "build": "rollup -c",
     "test": "jest --maxWorkers=50%",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "lint": "eslint 'src/**/*.{ts,tsx}'"
   }
 }
