--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -13,6 +13,9 @@
     "stentor": "1.56.85"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.38.0",
+    "eslint": "8.23.1",
+    "eslint-plugin-notice": "0.9.10",
     "typescript": "4.8.3"
   },
   "peerDependencies": {
@@ -20,6 +23,7 @@
   },
   "scripts": {
     "build": "tsc -d true -p .",
-    "clean": "rm -rf ./lib/*"
+    "clean": "rm -rf ./lib/*",
+    "lint": "eslint 'src/**/*.{ts,tsx}'"
   }
 }
