chore:password middleware

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -66,6 +66,7 @@
   },
   "dependencies": {
     "@xapp/question-answering-handler": "2.1.6",
+    "@xapp/oc-studio-starter-models": "1.0.0",
     "@xapp/stentor-alexa": "1.40.292",
     "@xapp/stentor-dialogflow": "1.40.292",
     "@xapp/stentor-lex-connect": "1.40.292",
