--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -21,7 +21,7 @@
     "resolveJsonModule": true,
     "noEmit": true
   },
-  "include": ["src", "typings/global.d.ts"],
+  "include": ["src", "typings/declaration.d.ts"],
   "exclude": [
     "node_modules",
     "build",
