--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -17,13 +17,13 @@
     "node": "^12 || ^14 || ^16"
   },
   "devDependencies": {
-    "@babel/core": "7.19.0",
-    "@babel/preset-env": "7.19.0",
+    "@babel/core": "7.19.1",
+    "@babel/preset-env": "7.19.1",
     "@babel/preset-typescript": "7.18.6",
-    "@types/aws-lambda": "8.10.102",
-    "@types/chai": "4.3.1",
+    "@types/aws-lambda": "8.10.104",
+    "@types/chai": "4.3.3",
     "@types/mocha": "9.1.1",
-    "@types/node": "14.18.26",
+    "@types/node": "18.7.18",
     "@types/sinon": "10.0.13",
     "@types/sinon-chai": "3.2.8",
     "@typescript-eslint/eslint-plugin": "5.38.0",
@@ -35,12 +35,12 @@
     "body-parser": "1.20.0",
     "cache-loader": "4.1.0",
     "chai": "4.3.6",
-    "eslint": "8.23.0",
+    "eslint": "8.23.1",
     "eslint-plugin-notice": "0.9.10",
     "express": "4.18.1",
     "fork-ts-checker-webpack-plugin": "7.2.13",
     "mocha": "10.0.0",
-    "nodemon": "2.0.19",
+    "nodemon": "2.0.20",
     "serverless": "3.22.0",
     "serverless-plugin-common-excludes": "4.0.0",
     "serverless-plugin-monorepo": "0.11.0",
@@ -60,18 +60,19 @@
     "update:prod": "rimraf ./lib && yarn build && serverless deploy -f app --stage production",
     "deploy:staging": "rimraf ./lib && yarn build && serverless deploy --stage staging",
     "deploy:prod": "rimraf ./lib && yarn build && serverless deploy --stage production",
-    "express": "STENTOR_LOG_LEVEL=debug nodemon src/express.ts",
+    "start": "STENTOR_LOG_LEVEL=debug nodemon src/express.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "test": "exit 0"
   },
   "dependencies": {
+    "@xapp/oc-studio-starter-models": "1.0.0",
     "@xapp/question-answering-handler": "2.1.6",
     "@xapp/stentor-alexa": "1.40.292",
     "@xapp/stentor-dialogflow": "1.40.292",
     "@xapp/stentor-lex-connect": "1.40.292",
     "@xapp/stentor-lex-v2": "1.40.292",
-    "stentor": "1.56.85",
     "stentor-channel": "1.56.85",
-    "stentor-user-storage-dynamo": "1.56.84"
+    "stentor-user-storage-dynamo": "1.56.84",
+    "stentor": "1.56.85"
   }
 }
