--- a/packages/components/renovate.json
+++ b/packages/components/renovate.json
@@ -1,7 +1,6 @@
 {
   "extends": ["config:base", "schedule:daily"],
-  "statusCheckVerify": true,
-  "ignoreDeps": ["style-loader", "css-loader", "sass", "sass-loader"],
+  "ignoreDeps": ["sass-loader"],
   "packageRules": [
     {
       "depTypeList": ["devDependencies"],
@@ -14,5 +13,6 @@
       "schedule": null,
       "automerge": true
     }
-  ]
+  ],
+  "prConcurrentLimit": 3
 }
