--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -67,6 +67,7 @@
   "dependencies": {
     "@xapp/oc-studio-starter-models": "1.0.0",
     "@xapp/question-answering-handler": "2.1.7",
+    "@xapp/contact-capture-handler": "1.0.2",
     "@xapp/stentor-alexa": "1.40.313",
     "@xapp/stentor-dialogflow": "1.40.313",
     "@xapp/stentor-lex-connect": "1.40.313",
