fix:working webpack config

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -57,9 +57,9 @@
     "clean": "rm -rf ./lib/*",
     "dist": "tsc -d true -p . && node scripts/dist.js",
     "webpack": "webpack",
-    "update:prod": "rimraf ./lib && yarn build && serverless deploy -f app --stage production",
-    "deploy:staging": "rimraf ./lib && yarn build && serverless deploy --stage staging",
-    "deploy:prod": "rimraf ./lib && yarn build && serverless deploy --stage production",
+    "update:prod": "rimraf ./lib && yarn webpack && serverless deploy -f app --stage production",
+    "deploy:staging": "rimraf ./lib && yarn webpack && serverless deploy --stage staging",
+    "deploy:prod": "rimraf ./lib && yarn webpack && serverless deploy --stage production",
     "start": "STENTOR_LOG_LEVEL=debug nodemon src/express.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "test": "exit 0"
