chore:cors on express

--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "declaration": true,
     "module": "commonjs",
+    "target": "ES2021",
+    "lib": ["ES2021"],
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "allowSyntheticDefaultImports": true,
     "outDir": "lib",
     "rootDir": "src",
-    "sourceMap": true,
-    "target": "es6"
+    "sourceMap": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "src/**/__test__/*"]
