--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -72,6 +72,7 @@
     "@xapp/contact-capture-handler": "1.0.4",
     "@xapp/stentor-alexa": "1.43.38",
     "@xapp/stentor-dialogflow": "1.43.38",
+    "@xapp/stentor-gbm": "1.43.38",
     "@xapp/stentor-lex-connect": "1.43.39",
     "@xapp/stentor-lex-v2": "1.43.39",
     "stentor-channel": "1.57.39",
