--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,15 @@ jspm_packages/
 # Yarn Integrity file
 .yarn-integrity
 
+# Yarn, not yet doing zero installs
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 # dotenv environment variables file
 .env
 .env.test
