--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,15 +23,15 @@
     "@types/aws-lambda": "8.10.109",
     "@types/chai": "4.3.4",
     "@types/cors": "2.8.13",
-    "@types/mocha": "10.0.1",
+    "@types/jest": "29.2.4",
     "@types/node": "18.7.18",
     "@types/sinon": "10.0.13",
     "@types/sinon-chai": "3.2.9",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@typescript-eslint/parser": "5.48.0",
     "@xapp/config": "0.2.3",
-    "aws-sdk": "2.1286.0",
-    "babel-loader": "9.1.0",
+    "aws-sdk": "2.1292.0",
+    "babel-loader": "9.1.2",
     "babel-preset-minify": "0.5.2",
     "body-parser": "1.20.1",
     "cache-loader": "4.1.0",
@@ -40,9 +40,10 @@
     "eslint": "8.31.0",
     "eslint-plugin-notice": "0.9.10",
     "express": "4.18.2",
-    "fork-ts-checker-webpack-plugin": "7.2.14",
-    "mocha": "10.2.0",
+    "fork-ts-checker-webpack-plugin": "7.3.0",
+    "jest": "29.3.1",
     "nodemon": "2.0.20",
+    "rimraf": "3.0.2",
     "serverless": "3.26.0",
     "serverless-plugin-common-excludes": "4.0.0",
     "serverless-plugin-monorepo": "0.11.0",
@@ -67,16 +68,16 @@
     "test": "exit 0"
   },
   "dependencies": {
+    "@xapp/contact-capture-handler": "1.0.4",
     "@xapp/oc-studio-starter-models": "1.0.0",
     "@xapp/question-answering-handler": "2.1.8",
-    "@xapp/contact-capture-handler": "1.0.4",
-    "@xapp/stentor-alexa": "1.43.38",
-    "@xapp/stentor-dialogflow": "1.43.38",
-    "@xapp/stentor-gbm": "1.43.38",
-    "@xapp/stentor-lex-connect": "1.43.39",
-    "@xapp/stentor-lex-v2": "1.43.39",
-    "stentor-channel": "1.57.39",
-    "stentor-user-storage-dynamo": "1.57.39",
-    "stentor": "1.57.39"
+    "@xapp/stentor-alexa": "1.43.46",
+    "@xapp/stentor-dialogflow": "1.43.46",
+    "@xapp/stentor-gbm": "1.43.46",
+    "@xapp/stentor-lex-connect": "1.43.46",
+    "@xapp/stentor-lex-v2": "1.43.46",
+    "stentor": "1.57.42",
+    "stentor-channel": "1.57.42",
+    "stentor-user-storage-dynamo": "1.57.42"
   }
 }
