chore: progress, smaller package

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,6 +23,7 @@
     "@types/aws-lambda": "8.10.109",
     "@types/chai": "4.3.4",
     "@types/cors": "2.8.13",
+    "@types/express": "4.17.15",
     "@types/jest": "29.2.4",
     "@types/node": "18.7.18",
     "@types/sinon": "10.0.13",
@@ -33,20 +34,17 @@
     "aws-sdk": "2.1292.0",
     "babel-loader": "9.1.2",
     "babel-preset-minify": "0.5.2",
-    "body-parser": "1.20.1",
     "cache-loader": "4.1.0",
     "chai": "4.3.7",
     "cors": "2.8.5",
     "eslint": "8.31.0",
     "eslint-plugin-notice": "0.9.10",
-    "express": "4.18.2",
     "fork-ts-checker-webpack-plugin": "7.3.0",
     "jest": "29.3.1",
     "nodemon": "2.0.20",
     "rimraf": "3.0.2",
     "serverless": "3.26.0",
     "serverless-plugin-common-excludes": "4.0.0",
-    "serverless-plugin-monorepo": "0.11.0",
     "sinon": "15.0.1",
     "sinon-chai": "3.7.0",
     "ts-node": "10.9.1",
@@ -76,6 +74,9 @@
     "@xapp/stentor-gbm": "1.43.46",
     "@xapp/stentor-lex-connect": "1.43.46",
     "@xapp/stentor-lex-v2": "1.43.46",
+    "ansi-styles": "6.2.1",
+    "body-parser": "1.20.1",
+    "express": "4.18.2",
     "stentor": "1.57.42",
     "stentor-channel": "1.57.42",
     "stentor-user-storage-dynamo": "1.57.42"
