--- a/packages/app/serverless.yml
+++ b/packages/app/serverless.yml
@@ -21,6 +21,7 @@ package:
     - resources/**
     - src/**
     - temp/**
+    - scripts/**
     - widget/**
     - yarn.lock
     - node_modules/aws-sdk/**
