--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -25,13 +25,13 @@
     "@types/cors": "2.8.13",
     "@types/express": "4.17.15",
     "@types/jest": "29.2.4",
-    "@types/node": "18.7.18",
+    "@types/node": "18.11.18",
     "@types/sinon": "10.0.13",
     "@types/sinon-chai": "3.2.9",
-    "@typescript-eslint/eslint-plugin": "5.48.0",
-    "@typescript-eslint/parser": "5.48.0",
+    "@typescript-eslint/eslint-plugin": "5.48.1",
+    "@typescript-eslint/parser": "5.48.1",
     "@xapp/config": "0.2.3",
-    "aws-sdk": "2.1292.0",
+    "aws-sdk": "2.1295.0",
     "babel-loader": "9.1.2",
     "babel-preset-minify": "0.5.2",
     "cache-loader": "4.1.0",
@@ -55,9 +55,8 @@
   },
   "scripts": {
     "build": "tsc -d true -p .",
-    "clean": "rm -rf ./lib/*",
-    "dist": "tsc -d true -p . && node scripts/dist.js",
-    "webpack": "webpack",
+    "clean": "rimraf ./lib",
+    "webpack": "rimraf ./lib && webpack",
     "update:prod": "rimraf ./lib && yarn webpack && serverless deploy -f app --stage production",
     "deploy:staging": "rimraf ./lib && yarn webpack && serverless deploy --stage staging",
     "deploy:prod": "rimraf ./lib && yarn webpack && serverless deploy --stage production",
@@ -69,16 +68,16 @@
     "@xapp/contact-capture-handler": "1.0.4",
     "@xapp/oc-studio-starter-models": "1.0.0",
     "@xapp/question-answering-handler": "2.1.8",
-    "@xapp/stentor-alexa": "1.43.46",
-    "@xapp/stentor-dialogflow": "1.43.46",
-    "@xapp/stentor-gbm": "1.43.46",
-    "@xapp/stentor-lex-connect": "1.43.46",
-    "@xapp/stentor-lex-v2": "1.43.46",
+    "@xapp/stentor-alexa": "1.43.50",
+    "@xapp/stentor-dialogflow": "1.43.50",
+    "@xapp/stentor-gbm": "1.43.50",
+    "@xapp/stentor-lex-connect": "1.43.50",
+    "@xapp/stentor-lex-v2": "1.43.50",
     "ansi-styles": "6.2.1",
     "body-parser": "1.20.1",
     "express": "4.18.2",
-    "stentor": "1.57.42",
-    "stentor-channel": "1.57.42",
-    "stentor-user-storage-dynamo": "1.57.42"
+    "stentor": "1.57.45",
+    "stentor-channel": "1.57.45",
+    "stentor-user-storage-dynamo": "1.57.43"
   }
 }
